caca: merge stop for sytral and adapt reatime connector

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(dumpsn dumpsn.cpp)
 target_link_libraries(dumpsn data)
+
+add_executable(merge merge_sp_lyon.cpp)
+target_link_libraries(merge data)
